--- a/Sass/layout/_homelayout.scss
+++ b/Sass/layout/_homelayout.scss
@@ -79,8 +79,8 @@ html{
         align-self: center;
         justify-self: center;
         color: white;
-        width: 30vw;
-        height: 8vw;
+        width: 15vw;
+        height: 4vw;
         margin-top: 1rem;
         border: none;
         border-radius: 0.5em;
@@ -121,7 +121,7 @@ html{
     }
 
     .aboutMeButton{
-        margin-top: 5vh;
+        margin-top: 15vh;
         background-color: $quaternary;
     }
 
@@ -611,12 +611,12 @@ html{
         }
 
         .tracks{
-            flex-direction: column;
+            flex-direction: row;
             place-content: center;
         }
 
         .track{
-            width: 30vw;
+            width: 100%;
             height: 30vw;
         }
         padding-bottom: $gapSize;
@@ -673,21 +673,30 @@ html{
 
 
         .tracks{
-            flex-direction: column;
+            // flex-direction: row;
             place-content: center;
             margin-top: -5vh;
         }
 
-        .track{
-            width: 30vw;
-            height: 30vw;
+        // .track{
+        //     width: 100%;
+        //     height: 30vw;
+        // }
+    }
+}
+
+@media screen and (max-width: 541px) {
+.proj{
+        figcaption{
+            width: 200%;
+            margin-left: -50%;
         }
     }
 }
 
 @media screen and (max-width: 501px){
     .selfie{
-        top: 22vh;
+        top: 40vh;
         align-self: center;
         right: initial;
         margin-left: 7vw;
@@ -697,6 +706,7 @@ html{
         padding-top: 0px;
         align-content: center;
         justify-content: center;
+        flex-direction: column;
         .introHeader{
             text-align: center;
         }
@@ -717,13 +727,40 @@ html{
             }
         }
     }
+
+    .projectsContainer{
+        .button{
+            span, .material-icons{
+                padding-left: 5%;
+            }
+        }
+    }
+
+    .musicContainer{
+        height: calc(#{$windowHeight} * 2);
+
+        .button{
+            span, .material-icons{
+                padding-left: 5%;
+                align-self: center;
+            }
+        }
+
+        .tracks{
+            margin-top: 0px;
+        }
+
+        .track{
+            height: 20rem;
+        }
+    }
 }
 
 @media screen and (max-width: 361px) {
     .selfie{
         position: absolute;
         right: .1rem;
-        bottom: 23.3vh;
+        top: 58vh
     }
 
     .introContainer{
@@ -797,9 +834,9 @@ html{
             height: calc((2.5 * #{$trackWidth}));
         }
 
-        .track{
-            width: 100%;
-            height: 100%;
-        }
+        // .track{
+        //     width: 100%;
+        //     height: 100%;
+        // }
     }
 }
