--- a/Sass/layout/_projectspage.scss
+++ b/Sass/layout/_projectspage.scss
@@ -3,7 +3,7 @@
     height: 85vh;
     display: grid;
     column-gap: 8px;
-    row-gap: 20px;
+    // row-gap: 20px;
     margin-top: 10vh;
     margin-left: 5vw;
     grid-template-rows: 5vh repeat(2, 35vh);
