Updated projects page and resume

--- a/Sass/layout/_aboutme.scss
+++ b/Sass/layout/_aboutme.scss
@@ -35,7 +35,7 @@
 
 .aboutmetitle {
     color: $CalmBlue;
-    font-family: $Cinzel;
+    font-family: $titleFont;
     font-weight: bolder;
     font-size: xx-large;
     width: 100%;
