--- a/Sass/utilities/_fonts.scss
+++ b/Sass/utilities/_fonts.scss
@@ -2,6 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Playfair+Display&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 
-$Cinzel: 'Cinzel', serif;
-$PlayFair: 'Playfair Display', serif;
-$DelaGothic: 'Dela Gothic One', cursive;
+$titleFont: 'Cinzel', serif; //Titles
+$textFont: 'Playfair Display', serif; //Text
+$headerFont: 'Dela Gothic One', cursive; //Headers
